<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentShareConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShareFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/qrTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/qrTitle"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textSize="34sp"
        app:autoSizeTextType="none"
        app:layout_constraintBottom_toTopOf="@+id/tvShareInstructions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/shareQRImageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/qrDescription"
        android:src="@drawable/common_google_signin_btn_icon_dark_focused"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/btnShareLink"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvShareInstructions"
        tools:visibility="visible" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvShareInstructions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/qrInstruction"
        android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
        android:textSize="24sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/shareQRImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/qrTitle" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnShareLink"
        style="@style/Widget.Material3.Button.TonalButton.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/shareLink"
        android:textAllCaps="false"
        android:textSize="20sp"
        android:theme="@style/Widget.Material3.Button.TonalButton.Icon"
        android:visibility="invisible"
        app:cornerRadius="15dp"
        app:icon="@drawable/ic_baseline_share_24"
        app:iconPadding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shareQRImageView"
        tools:visibility="visible" />

    <ProgressBar
        android:id="@+id/progressBarSpinner"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/shareQRImageView"
        app:layout_constraintEnd_toEndOf="@+id/shareQRImageView"
        app:layout_constraintStart_toStartOf="@+id/shareQRImageView"
        app:layout_constraintTop_toTopOf="@+id/shareQRImageView" />

</androidx.constraintlayout.widget.ConstraintLayout>