<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayoutAddTag"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TagConnectFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTagConnectTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/connectNewTag"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.Material3.TitleLarge"
        android:textSize="34sp"
        app:layout_constraintBottom_toTopOf="@+id/rvTagConnect"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTagConnect"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@id/linLayoutQRButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTagConnectTitle"
        tools:itemCount="5"
        tools:listitem="@layout/rv_tag">

    </androidx.recyclerview.widget.RecyclerView>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tvTagConnectNoBeacons"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        android:gravity="center"
        android:text="@string/noNearbyBeacons"
        android:translationZ="-10dp"
        android:visibility="invisible"
        app:autoSizeMaxTextSize="34sp"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/linLayoutQRButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTagConnectTitle" />

    <LinearLayout
        android:id="@+id/linLayoutQRButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTagConnectNoBeacons">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnQrScanner"
            style="@style/Widget.Material3.Button.TonalButton.Icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/qrScanBtn"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:theme="@style/Widget.Material3.Button.TonalButton.Icon"
            app:cornerRadius="15dp"
            app:icon="@drawable/ic_baseline_share_24"
            app:iconPadding="8dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>